apps/glance/overlays/homelab/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: glance

spec:
  ingressClassName: cilium

  rules:
    - host: glance.home.arpa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: glance
                port:
                  name: http
